external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_struct_match.exp
error[E03006]: unexpected name in this position
  ┌─ tests/development/enums/matching/invalid_struct_match.move:7:13
  │
7 │             Box { x: T } => (),
  │             ^^^ Unexpected module member identifier. A module member identifier is not a valid variant

